# Resraurant_Reservation_Service

./: .env.sample  Dockerfile  README.md  data_TimeSections.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
media/reserv_service/images/: logo.avif
reserv_service/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
reserv_service/management/commands/: create_tables.py
reserv_service/migrations/: 0001_initial.py  0002_alter_table_times.py  0003_order_order_confirm.py
reserv_service/templates/reserv_service/: about_us.html  base.html  contacts.html  feedback_form.html  index.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  our_service.html  reservation_blank.html
reserv_service/templates/reserv_service/includes/: carusel.html  footer.html  header.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_country_user_address.py
users/templates/users/: admin.html  login.html  my_cabinet.html  registration.html  restore_password.html  user_confirm_delete.html  user_form.html
users/templates/users/includes/: orders_list.html
